...
  'tabs.players': 'Joueurs',
  'tabs.stats': 'Stats',

  'route.back': 'Retour',
  'route.settings': 'Réglages',
  'route.rules': 'Aide-mémoire du barème',
  'route.newGame': 'Nouvelle partie',
  'route.scoresheet': 'Feuille de score',
  'route.gameSettings': 'Réglages de la partie',
  'route.gameEnd': 'Fin de partie',
  'route.gameDetail': 'Détail de la partie',

  'home.title': 'Skull King',
...
